# blinds-rs

./: .gitignore  Cargo.toml  Makefile  build.rs  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
