[package]
name = "blinds_rs"
version = "0.1.0"
authors = ["pwf <aaron.lisman@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"
license = "MIT OR Apache-2.0"

[dependencies]
#embassy-time       = { version = "0.1.1", features = ["nightly"] }
#hal = { package = "esp32s3-hal", path = "../esp-hal/esp32s3-hal/", features = ["embassy", "embassy-time-systick"] }
#fugit = "0.3.7"
#embedded-hal-1 = { version = "=1.0.0-alpha.10", package = "embedded-hal" }
##critical-section  = "1.1.1"
#embassy-executor  = { version = "0.2.0", features = ["nightly", "integrated-timers", "arch-xtensa", "executor-thread"] }
#esp-alloc         = "0.3.0"
#esp-backtrace     = { version = "0.7.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
#esp-println       = { version = "0.5.0", features = ["esp32s3", "log"] }
#static_cell       = "1.0.0"
tmc-rs = { version = "0.1.0", path = "../tmc-rs" }
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }
matter-iot = { git = "https://github.com/project-chip/matter-rs.git", branch = "sequential", default-features = false }
anyhow = "1.0.71"

[build-dependencies]
embuild = "0.31.2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["all", "hal", "esp-idf-sys/native", "embassy"] #, "embassy-time-systick"]
#embassy-time-systick = []

pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]
